--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- content section -->
     <div class="wrapper">
-        <div class="bg_color"> background color :<span id="color_code"> #1b1b1b </span> </div>
+        <div class="bg_color"> background color : <span id="color_code"> #e6e6e6 </span> </div>
         <div class="buttons">
             <div> <button class="btn" id="click_me">click me</button> </div>
             <div> <button class="btn" id="surprise">surprise !!</button> </div>
